k8s/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reghub-web
  namespace: reghub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reghub-web
  template:
    metadata:
      labels:
        app: reghub-web
    spec:
      containers:
        - name: reghub-web
          image: 818916267011.dkr.ecr.us-east-1.amazonaws.com/redis-db-demo:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 768Mi
