k8s/base/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: reghub
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: 818916267011.dkr.ecr.us-east-1.amazonaws.com/reghub-notification-service:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 75
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
