k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reghub-web
  namespace: reghub
spec:
  type: ClusterIP
  selector:
    app: reghub-web
  ports:
    - name: http
      port: 80
      targetPort: http
